Finalized homepage views with data and filters

--- a/app/templates/partials/comments.html
+++ b/app/templates/partials/comments.html
@@ -2,7 +2,8 @@
   {% for comment in comments %}
   <section class="comment">
     <div class="meta">
-      {{comment.user.username}} on {{comment.created_at}}
+                           <!-- jinja filter starts at | format_date -->
+      {{comment.user.username}} on {{comment.created_at|format_date}}  
     </div>
     <div class="text">
       {{comment.comment_text}}
